# proto-emu-gen

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: host-layer.md  model-and-architecture.md  transpiler-subset.md  workflow-and-examples.md
examples/: cycle_accurate.py  fibonacci.c  fibonacci.py  tinyboy.c  tinyboy.py  tinysuper.c  tinysuper.py
examples/game_boy/: config.json  game_boy.c  game_boy.py  game_boy_host.py  game_boy_sdl.c
examples/game_boy/technical_docs/: gb_cpu_specs.md  gb_graphics_specs.md  gb_hardware_specs.md  gb_memory_specs.md  gb_sound_specs.md
examples/snes/technical_docs/: snes_audio_specs.md  snes_coprocessor_specs.md  snes_cpu_specs.md  snes_system_specs.md
src/proto/: __init__.py  codegen.py  cpu.py  hardware.py  host.py  host_codegen.py  memory.py  transpiler.py
tests/: test_codegen_integration.py  test_hardware.py  test_memory.py  test_tier2_cycle_accurate.py  test_tier3.py  test_transpiler.py
